// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DiscoveryExportCommand > discovers decorator entities via MetadataStorage.isKnownEntity 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > discovers multiple entities from multiple files 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './experiments/Author.js';
import { BookSchema } from './experiments/Book.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  Author,
  BookSchema,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > dumps output to stdout with --dump flag 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { AuthorSchema } from './experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  AuthorSchema,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > generates CJS imports without extension 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './experiments/Author';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > generates ESM imports with .js extension 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > includes Database type export 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > resolves driver package from config 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from './experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/postgresql';

export const entities = [
  Author,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > skips class implementations linked from EntitySchema 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { AuthorSchema } from './experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  AuthorSchema,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;

exports[`DiscoveryExportCommand > writes to file when --dump is not set 1`] = `
"// This file was generated by MikroORM CLI. Do not edit manually.
// Re-run \`mikro-orm discovery:export\` to update.

import { Author } from '../Users/adamek/htdocs/apify/experiments/Author.js';
import type { EntitySchemaWithMeta, InferKyselyDB, InferClassEntityDB } from '@mikro-orm/sqlite';

export const entities = [
  Author,
] as const;

export type Database = InferKyselyDB<Extract<(typeof entities)[number], EntitySchemaWithMeta>>
  & InferClassEntityDB<(typeof entities)[number]>;
"
`;
